--- a/pyneb/test/Test_RedCorr.ipynb
+++ b/pyneb/test/Test_RedCorr.ipynb
@@ -1,330 +1,349 @@
 {
- "metadata": {
-  "name": "",
-  "signature": "sha256:795b5d5c4c66ebc0279f0de335e18702618cb43da07417799661ce83a7903001"
- },
- "nbformat": 3,
- "nbformat_minor": 0,
- "worksheets": [
+ "cells": [
   {
-   "cells": [
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "import pyneb as pn\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "rc = pn.RedCorr()\n",
+    "wl = [4861, 6000, 3000]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "import pyneb as pn\n",
-      "import numpy as np\n",
-      "import matplotlib.pyplot as plt"
-     ],
-     "language": "python",
+     "data": {
+      "text/plain": [
+       "['G03 LMC',\n",
+       " 'K76',\n",
+       " 'F99-like',\n",
+       " 'F88 F99 LMC',\n",
+       " 'No correction',\n",
+       " 'SM79 Gal',\n",
+       " 'MCC99 FM90 LMC',\n",
+       " 'CCM89 Bal07',\n",
+       " 'CCM89 oD94',\n",
+       " 'S79 H83 CCM89',\n",
+       " 'F99',\n",
+       " 'CCM89']"
+      ]
+     },
+     "execution_count": 3,
      "metadata": {},
-     "outputs": [],
-     "prompt_number": 1
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "rc = pn.RedCorr()\n",
-      "wl = [4861, 6000, 3000]"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 2
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "rc.getLaws()"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 3,
-       "text": [
-        "['G03 LMC',\n",
-        " 'K76',\n",
-        " 'F99-like',\n",
-        " 'F88 F99 LMC',\n",
-        " 'No correction',\n",
-        " 'SM79 Gal',\n",
-        " 'MCC99 FM90 LMC',\n",
-        " 'CCM89 Bal07',\n",
-        " 'CCM89 oD94',\n",
-        " 'S79 H83 CCM89',\n",
-        " 'F99',\n",
-        " 'CCM89']"
-       ]
-      }
-     ],
-     "prompt_number": 3
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "rc.law = 'CCM89'\n",
-      "rc.cHbeta = 1.5\n",
-      "print rc.AV, rc.E_BV"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "3.220912736 1.03900410839\n"
-       ]
-      }
-     ],
-     "prompt_number": 4
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "rc.getCorr(wl)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 5,
-       "text": [
-        "array([  31.6227766 ,   14.72918129,  220.01364957])"
-       ]
-      }
-     ],
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "rc.getCorrHb(wl)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 6,
-       "text": [
-        "array([ 1.        ,  0.46577761,  6.95744249])"
-       ]
-      }
-     ],
-     "prompt_number": 6
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "rc.law = 'F99'"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 7
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "rc.getCorr(wl)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "metadata": {},
-       "output_type": "pyout",
-       "prompt_number": 8,
-       "text": [
-        "array([  31.6227766 ,   13.03246827,  206.25607478])"
-       ]
-      }
-     ],
-     "prompt_number": 8
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "rc2 = pn.RedCorr(law='F99')\n",
-      "rc2.cHbeta = 1.5\n",
-      "print rc2.getCorrHb(wl)\n",
-      "print rc2.getCorr(wl)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[ 1.          0.41212283  6.52238978]\n",
-        "[  31.6227766    13.03246827  206.25607478]\n"
-       ]
-      }
-     ],
-     "prompt_number": 9
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "rc2 = pn.RedCorr(law='S79 H83 CCM89')\n",
-      "rc2.cHbeta = 1.5\n",
-      "print rc2.getCorrHb(wl)\n",
-      "print rc2.getCorr(wl)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[ 1.          0.44435566  5.86254086]\n",
-        "[  31.6227766    14.05175965  185.38981993]\n"
-       ]
-      }
-     ],
-     "prompt_number": 10
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "rc2 = pn.RedCorr(law='SM79 Gal')\n",
-      "rc2.cHbeta = 1.5\n",
-      "print rc2.getCorrHb(wl)\n",
-      "print rc2.getCorr(wl)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[ 1.          0.45206041  6.8230218 ]\n",
-        "[  31.6227766    14.29540548  215.76289427]\n"
-       ]
-      }
-     ],
-     "prompt_number": 11
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "rc2 = pn.RedCorr(law='K76')\n",
-      "rc2.cHbeta = 1.5\n",
-      "print rc2.getCorrHb(wl)\n",
-      "print rc2.getCorr(wl)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[ 1.          0.43943018  5.81955646]\n",
-        "[ 1.00025358  0.43954162  5.82103218]\n"
-       ]
-      }
-     ],
-     "prompt_number": 12
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "rc2.cHbeta = 1.5\n",
-      "print rc2.getCorrHb(wl)\n",
-      "print rc2.getCorr(wl)"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[ 1.          0.43943018  5.81955646]\n",
-        "[ 1.00025358  0.43954162  5.82103218]\n"
-       ]
-      }
-     ],
-     "prompt_number": 13
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "rc2 = pn.RedCorr()\n",
-      "rc2.cHbeta = 3\n",
-      "print(rc2.AV, rc2.E_BV, rc2.cHbeta)\n",
-      "rc2.law = 'K76'\n",
-      "print(rc2.AV, rc2.E_BV, rc2.cHbeta)\n",
-      "rc2.cHbeta = 3\n",
-      "print(rc2.AV, rc2.E_BV, rc2.cHbeta)\n",
-      "rc2.cHbeta = 3\n",
-      "print(rc2.AV, rc2.E_BV, rc2.cHbeta)\n",
-      "rc2.E_BV = 3\n",
-      "print(rc2.AV, rc2.E_BV, rc2.cHbeta)\n",
-      "rc2.E_BV = 3\n",
-      "print(rc2.AV, rc2.E_BV, rc2.cHbeta)\n",
-      "rc2.AV = 3\n",
-      "print(rc2.AV, rc2.E_BV, rc2.cHbeta)\n",
-      "rc2.AV = 3\n",
-      "print(rc2.AV, rc2.E_BV, rc2.cHbeta)\n",
-      "rc2.cHbeta = 3\n",
-      "print(rc2.AV, rc2.E_BV, rc2.cHbeta)\n"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "(0.0, array(0), array(3))\n",
-        "(array([ 23.25]), array([ 7.5]), array(3))\n",
-        "(316716.66666647716, 102166.66666660552, array(3))\n",
-        "(4314384814.8096504, 1391737037.0353711, array(3))\n",
-        "(9.3000000000000007, array(3), 0.00022022838499197522)\n",
-        "(9.3000000000000007, array(3), 1.6166847185391219e-08)\n",
-        "(3.0, array(0.9677419354838709), 1.1867995486835894e-12)\n",
-        "(3.0, array(0.9677419354838709), 8.7122315971930661e-17)\n",
-        "(40866.66666664221, 13182.795698916842, array(3))\n"
-       ]
-      }
-     ],
-     "prompt_number": 27
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": []
+     "output_type": "execute_result"
     }
    ],
-   "metadata": {}
+   "source": [
+    "rc.getLaws()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.22120161009 1.03909729358\n"
+     ]
+    }
+   ],
+   "source": [
+    "rc.law = 'CCM89'\n",
+    "rc.cHbeta = 1.5\n",
+    "print rc.AV, rc.E_BV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  31.63257384,   14.73273503,  220.1201056 ])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rc.getCorr(wl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 1.00030982,  0.46588999,  6.96080892])"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rc.getCorrHb(wl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "rc.law = 'F99'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([  31.63283197,   13.03554862,  206.35727716])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rc.getCorr(wl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.00031798  0.41222024  6.52559008]\n",
+      "[  31.63283197   13.03554862  206.35727716]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rc2 = pn.RedCorr(law='F99')\n",
+    "rc2.cHbeta = 1.5\n",
+    "print rc2.getCorrHb(wl)\n",
+    "print rc2.getCorr(wl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.00028166  0.44445142  5.86503785]\n",
+      "[  31.63168359   14.05478793  185.46878163]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rc2 = pn.RedCorr(law='S79 H83 CCM89')\n",
+    "rc2.cHbeta = 1.5\n",
+    "print rc2.getCorrHb(wl)\n",
+    "print rc2.getCorr(wl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.00029706  0.45216383  6.82617585]\n",
+      "[  31.63217059   14.29867585  215.86263397]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rc2 = pn.RedCorr(law='SM79 Gal')\n",
+    "rc2.cHbeta = 1.5\n",
+    "print rc2.getCorrHb(wl)\n",
+    "print rc2.getCorr(wl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.00027724  0.43955201  5.82116986]\n",
+      "[ 1.00025358  0.43954162  5.82103218]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rc2 = pn.RedCorr(law='K76')\n",
+    "rc2.cHbeta = 1.5\n",
+    "print rc2.getCorrHb(wl)\n",
+    "print rc2.getCorr(wl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1.00027724  0.43955201  5.82116986]\n",
+      "[ 1.00025358  0.43954162  5.82103218]\n"
+     ]
+    }
+   ],
+   "source": [
+    "rc2.cHbeta = 1.5\n",
+    "print rc2.getCorrHb(wl)\n",
+    "print rc2.getCorr(wl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(0.0, array(0), array(3))\n",
+      "(array([ 23.25]), array([ 7.5]), array(3))\n",
+      "(-3395228.5736711812, -1095235.0237648971, array(3))\n",
+      "(495809766342.93518, 159938634304.17264, array(3))\n",
+      "(9.3000000000000007, array(3), -2.0543535872926802e-05)\n",
+      "(9.3000000000000007, array(3), 1.4067895538741014e-10)\n",
+      "(array(3), 0.96774193548387089, -9.6334772218904304e-16)\n",
+      "(array(3), 0.96774193548387089, 6.5968561629643084e-21)\n",
+      "(-438094.00950595882, -141320.64822772864, array(3))\n"
+     ]
+    }
+   ],
+   "source": [
+    "rc2 = pn.RedCorr()\n",
+    "rc2.cHbeta = 3\n",
+    "print(rc2.AV, rc2.E_BV, rc2.cHbeta)\n",
+    "rc2.law = 'K76'\n",
+    "print(rc2.AV, rc2.E_BV, rc2.cHbeta)\n",
+    "rc2.cHbeta = 3\n",
+    "print(rc2.AV, rc2.E_BV, rc2.cHbeta)\n",
+    "rc2.cHbeta = 3\n",
+    "print(rc2.AV, rc2.E_BV, rc2.cHbeta)\n",
+    "rc2.E_BV = 3\n",
+    "print(rc2.AV, rc2.E_BV, rc2.cHbeta)\n",
+    "rc2.E_BV = 3\n",
+    "print(rc2.AV, rc2.E_BV, rc2.cHbeta)\n",
+    "rc2.AV = 3\n",
+    "print(rc2.AV, rc2.E_BV, rc2.cHbeta)\n",
+    "rc2.AV = 3\n",
+    "print(rc2.AV, rc2.E_BV, rc2.cHbeta)\n",
+    "rc2.cHbeta = 3\n",
+    "print(rc2.AV, rc2.E_BV, rc2.cHbeta)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": []
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 2",
+   "language": "python",
+   "name": "python2"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 2
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
 }
