Adding recombination lines to atomdict

--- a/pyneb/docs/Notebooks/PyNeb_manual_2.ipynb
+++ b/pyneb/docs/Notebooks/PyNeb_manual_2.ipynb
@@ -96,8 +96,8 @@
     {
      "data": {
       "text/plain": [
-       "array([  7.83243624e-01,   1.92593781e-01,   2.41582853e-02,\n",
-       "         4.30923299e-06,   2.94925262e-10])"
+       "array([  7.81643685e-01,   1.93870586e-01,   2.44814197e-02,\n",
+       "         4.30930821e-06,   2.97166313e-10])"
       ]
      },
      "execution_count": 4,
@@ -121,8 +121,8 @@
     {
      "data": {
       "text/plain": [
-       "array([  8.03949269e-01,   1.74079304e-01,   2.19614822e-02,\n",
-       "         9.94300080e-06,   2.03531697e-09])"
+       "array([  8.02454816e-01,   1.75280839e-01,   2.22544005e-02,\n",
+       "         9.94241529e-06,   2.05075367e-09])"
       ]
      },
      "execution_count": 5,
@@ -172,8 +172,8 @@
      "output_type": "stream",
      "text": [
       "Critical densities\n",
-      "N20.00e+00 4.04e+01 2.48e+02 9.85e+04 1.57e+07 1.00e+10\n",
-      "O30.00e+00 5.36e+02 3.75e+03 7.31e+05 2.63e+07\n"
+      "N20.00e+00 4.06e+01 2.47e+02 9.55e+04 1.74e+07 9.83e+09\n",
+      "O30.00e+00 5.31e+02 3.70e+03 7.31e+05 2.61e+07\n"
      ]
     }
    ],
@@ -195,7 +195,7 @@
     {
      "data": {
       "text/plain": [
-       "array(3.4970126702581255e-21)"
+       "array(3.4970737098460715e-21)"
       ]
      },
      "execution_count": 8,
@@ -297,7 +297,7 @@
     {
      "data": {
       "text/plain": [
-       "array(3.4970126702581255e-21)"
+       "array(3.4970737098460715e-21)"
       ]
      },
      "execution_count": 11,
@@ -331,8 +331,8 @@
     {
      "data": {
       "text/plain": [
-       "array([[  1.17193331e-21,   1.18342741e-21],\n",
-       "       [  1.79326025e-21,   1.80800792e-21]])"
+       "array([[  1.17195376e-21,   1.18350278e-21],\n",
+       "       [  1.79323749e-21,   1.80805851e-21]])"
       ]
      },
      "execution_count": 12,
@@ -356,7 +356,7 @@
     {
      "data": {
       "text/plain": [
-       "array([  1.17193331e-21,   1.80800792e-21])"
+       "array([  1.17195376e-21,   1.80805851e-21])"
       ]
      },
      "execution_count": 13,
@@ -400,7 +400,7 @@
     {
      "data": {
       "text/plain": [
-       "10047.159990568513"
+       "10070.108613008601"
       ]
      },
      "execution_count": 14,
@@ -446,7 +446,7 @@
     {
      "data": {
       "text/plain": [
-       "14869.309006222302"
+       "14923.313659752961"
       ]
      },
      "execution_count": 15,
@@ -480,7 +480,7 @@
     {
      "data": {
       "text/plain": [
-       "14869.309006222302"
+       "14923.313659752961"
       ]
      },
      "execution_count": 16,
@@ -514,7 +514,7 @@
     {
      "data": {
       "text/plain": [
-       "17146.976141241066"
+       "17201.456195718863"
       ]
      },
      "execution_count": 17,
@@ -538,7 +538,7 @@
     {
      "data": {
       "text/plain": [
-       "8314.4744402712549"
+       "8303.6441184966006"
       ]
      },
      "execution_count": 18,
@@ -574,7 +574,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 14882.79182011,  16656.80498698])"
+       "array([ 14936.84544261,  16724.87927208])"
       ]
      },
      "execution_count": 19,
@@ -598,7 +598,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 14882.79182011,  16687.02595035])"
+       "array([ 14936.84544261,  16755.22374476])"
       ]
      },
      "execution_count": 20,
@@ -686,7 +686,7 @@
     {
      "data": {
       "text/plain": [
-       "1.3535910317699493e-05"
+       "1.3536707442595606e-05"
       ]
      },
      "execution_count": 22,
@@ -781,11 +781,66 @@
    "cell_type": "code",
    "execution_count": 25,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "warng _ManageAtomicData: rec data not available for P2\n",
+      "warng _ManageAtomicData: rec data not available for Ba4\n",
+      "warng _ManageAtomicData: rec data not available for Ba2\n",
+      "warng _ManageAtomicData: rec data not available for S3\n",
+      "warng _ManageAtomicData: rec data not available for Rb6\n",
+      "warng _ManageAtomicData: rec data not available for Rb5\n",
+      "warng _ManageAtomicData: rec data not available for Rb4\n",
+      "warng _ManageAtomicData: rec data not available for Ni3\n",
+      "warng _ManageAtomicData: rec data not available for Ca5\n",
+      "warng _ManageAtomicData: rec data not available for S4\n",
+      "warng _ManageAtomicData: rec data not available for Se4\n",
+      "warng _ManageAtomicData: rec data not available for Ne6\n",
+      "warng _ManageAtomicData: rec data not available for Kr4\n",
+      "warng _ManageAtomicData: rec data not available for K5\n",
+      "warng _ManageAtomicData: rec data not available for K4\n",
+      "warng _ManageAtomicData: rec data not available for Ar2\n",
+      "warng _ManageAtomicData: rec data not available for Ar3\n",
+      "warng _ManageAtomicData: rec data not available for Ar4\n",
+      "warng _ManageAtomicData: rec data not available for Ar5\n",
+      "warng _ManageAtomicData: rec data not available for Ne5\n",
+      "warng _ManageAtomicData: rec data not available for Ne2\n",
+      "warng _ManageAtomicData: rec data not available for Br4\n",
+      "warng _ManageAtomicData: rec data not available for Kr5\n",
+      "warng _ManageAtomicData: rec data not available for Ne3\n",
+      "warng _ManageAtomicData: rec data not available for Xe4\n",
+      "warng _ManageAtomicData: rec data not available for Xe6\n",
+      "warng _ManageAtomicData: rec data not available for S2\n",
+      "warng _ManageAtomicData: rec data not available for Al2\n",
+      "warng _ManageAtomicData: rec data not available for Ne4\n",
+      "warng _ManageAtomicData: rec data not available for Si3\n",
+      "warng _ManageAtomicData: rec data not available for Si2\n",
+      "warng _ManageAtomicData: rec data not available for Xe3\n",
+      "warng _ManageAtomicData: rec data not available for Fe6\n",
+      "warng _ManageAtomicData: rec data not available for Fe7\n",
+      "warng _ManageAtomicData: rec data not available for Fe4\n",
+      "warng _ManageAtomicData: rec data not available for Fe5\n",
+      "warng _ManageAtomicData: rec data not available for Fe2\n",
+      "warng _ManageAtomicData: rec data not available for Fe3\n",
+      "warng _ManageAtomicData: rec data not available for Na4\n",
+      "warng _ManageAtomicData: rec data not available for Se3\n",
+      "warng _ManageAtomicData: rec data not available for Cl4\n",
+      "warng _ManageAtomicData: rec data not available for Cl2\n",
+      "warng _ManageAtomicData: rec data not available for Cl3\n",
+      "warng _ManageAtomicData: rec data not available for Br3\n",
+      "warng _ManageAtomicData: rec data not available for Mg7\n",
+      "warng _ManageAtomicData: rec data not available for Mg5\n",
+      "warng _ManageAtomicData: rec data not available for Kr3\n",
+      "warng _ManageAtomicData: rec data not available for Na6\n"
+     ]
+    }
+   ],
    "source": [
     "atoms = pn.getAtomDict() # a method always requires parenthesis, even without argument"
    ]
@@ -805,7 +860,7 @@
        "{'3He2': Atom 3He2 from 3he_ii_atom_cloudy.dat and 3he_ii_coll_cloudy.dat,\n",
        " 'Al2': Atom Al2 from al_ii_atom_JSP86-HK87-VVF96-KS86.dat and al_ii_coll_KHAF92-TBK85-TBK84.dat,\n",
        " 'Ar2': Atom Ar2 from ar_ii_atom_Bal06.dat and ar_ii_coll_PB95.dat,\n",
-       " 'Ar3': Atom Ar3 from ar_iii_atom_M83-KS86.dat and ar_iii_coll_GMZ95.dat,\n",
+       " 'Ar3': Atom Ar3 from ar_iii_atom_MB09.dat and ar_iii_coll_MB09.dat,\n",
        " 'Ar4': Atom Ar4 from ar_iv_atom_MZ82.dat and ar_iv_coll_RB97.dat,\n",
        " 'Ar5': Atom Ar5 from ar_v_atom_LL93-MZ82-KS86.dat and ar_v_coll_GMZ95.dat,\n",
        " 'Ba2': Atom Ba2 from ba_ii_atom_C04.dat and ba_ii_coll_SB98.dat,\n",
@@ -813,9 +868,13 @@
        " 'Br3': Atom Br3 from br_iii_atom_BH86.dat and br_iii_coll_S97.dat,\n",
        " 'Br4': Atom Br4 from br_iv_atom_BH86.dat and br_iv_coll_S97.dat,\n",
        " 'C1': Atom C1 from c_i_atom_FFS85.dat and c_i_coll_JBK87-PA76.dat,\n",
+       " 'C1r': Atom C1 from c_i_rec_P91.func,\n",
        " 'C2': Atom C2 from c_ii_atom_GMZ98.dat and c_ii_coll_BP92.dat,\n",
+       " 'C2r': Atom C2 from c_ii_rec_P91.func,\n",
        " 'C3': Atom C3 from c_iii_atom_G83-NS78-WFD96.dat and c_iii_coll_Bal85.dat,\n",
+       " 'C3r': Atom C3 from c_iii_rec_P91.func,\n",
        " 'C4': Atom C4 from c_iv_atom_WFD96.dat and c_iv_coll_AK04.dat,\n",
+       " 'C4r': Atom C4 from c_iv_rec_P91.func,\n",
        " 'Ca5': Atom Ca5 from ca_v_atom_M83-KS86.dat and ca_v_coll_GMZ95.dat,\n",
        " 'Cl2': Atom Cl2 from cl_ii_atom_MZ83.dat and cl_ii_coll_T04.dat,\n",
        " 'Cl3': Atom Cl3 from cl_iii_atom_M83-KS86.dat and cl_iii_coll_BZ89.dat,\n",
@@ -834,22 +893,31 @@
        " 'Mg5': Atom Mg5 from mg_v_atom_GMZ97.dat and mg_v_coll_BZ94.dat,\n",
        " 'Mg7': Atom Mg7 from mg_vii_atom_GMZ97.dat and mg_vii_coll_LB94-U.dat,\n",
        " 'N1': Atom N1 from n_i_atom_KS86-WFD96.dat and n_i_coll_PA76-DMR76.dat,\n",
-       " 'N2': Atom N2 from n_ii_atom_GMZ97-WFD96.dat and n_ii_coll_T11.dat,\n",
+       " 'N1r': Atom N1 from n_i_rec_P91.func,\n",
+       " 'N2': Atom N2 from n_ii_atom_FFT04.dat and n_ii_coll_T11.dat,\n",
+       " 'N2r': Atom N2 from n_ii_rec_P91.func,\n",
        " 'N3': Atom N3 from n_iii_atom_GMZ98.dat and n_iii_coll_BP92.dat,\n",
+       " 'N3r': Atom N3 from n_iii_rec_P91.func,\n",
        " 'N4': Atom N4 from n_iv_atom_WFD96.dat and n_iv_coll_RBHB94.dat,\n",
+       " 'N4r': Atom N4 from n_iv_rec_P91.func,\n",
        " 'Na4': Atom Na4 from na_iv_atom_GMZ97.dat and na_iv_coll_BZ94.dat,\n",
        " 'Na6': Atom Na6 from na_vi_atom_GMZ97.dat and na_vi_coll_LB94.dat,\n",
        " 'Ne2': Atom Ne2 from ne_ii_atom_Bal06.dat and ne_ii_coll_GMB01.dat,\n",
        " 'Ne3': Atom Ne3 from ne_iii_atom_GMZ97.dat and ne_iii_coll_McLB00.dat,\n",
        " 'Ne4': Atom Ne4 from ne_iv_atom_BBZ89-BK88.dat and ne_iv_coll_G81.dat,\n",
-       " 'Ne5': Atom Ne5 from ne_v_atom_GMZ97-U-BD93.dat and ne_v_coll_LB94.dat,\n",
+       " 'Ne5': Atom Ne5 from ne_v_atom_GMZ97-U-BD93.dat and ne_v_coll_DPNP13.dat,\n",
        " 'Ne6': Atom Ne6 from ne_vi_atom_GMZ98.dat and ne_vi_coll_ZGP94.dat,\n",
        " 'Ni3': Atom Ni3 from ni_iii_atom_B01.dat and ni_iii_coll_B01.dat,\n",
        " 'O1': Atom O1 from o_i_atom_WFD96.dat and o_i_coll_BK95.dat,\n",
-       " 'O2': Atom O2 from o_ii_atom_Z82-WFD96.dat and o_ii_coll_P06-T07.dat,\n",
-       " 'O3': Atom O3 from o_iii_atom_SZ00-WFD96.dat and o_iii_coll_SSB14.dat,\n",
+       " 'O1r': Atom O1 from o_i_rec_P91.func,\n",
+       " 'O2': Atom O2 from o_ii_atom_FFT04.dat and o_ii_coll_Kal09.dat,\n",
+       " 'O2r': Atom O2 from o_ii_rec_SSB17-B-opt.hdf5,\n",
+       " 'O3': Atom O3 from o_iii_atom_FFT04-SZ00.dat and o_iii_coll_SSB14.dat,\n",
+       " 'O3r': Atom O3 from o_iii_rec_P91.func,\n",
        " 'O4': Atom O4 from o_iv_atom_GMZ98.dat and o_iv_coll_BP92.dat,\n",
+       " 'O4r': Atom O4 from o_iv_rec_P91.func,\n",
        " 'O5': Atom O5 from o_v_atom_H80-NS79.dat and o_v_coll_BBDK85.dat,\n",
+       " 'O5r': Atom O5 from o_v_rec_P91.func,\n",
        " 'P2': Atom P2 from p_ii_atom_MZ82.dat and p_ii_coll_T04.dat,\n",
        " 'Rb4': Atom Rb4 from rb_iv_atom_BH86.dat and rb_iv_coll_S97.dat,\n",
        " 'Rb5': Atom Rb5 from rb_v_atom_BH86.dat and rb_v_coll_S97.dat,\n",
@@ -898,7 +966,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "62\n"
+      "75\n"
      ]
     }
    ],
@@ -921,18 +989,24 @@
      "text": [
       "warng _ManageAtomicData: data for C5 not available\n",
       "warng _ManageAtomicData: data for C5 not available\n",
+      "warng _ManageAtomicData: data for C5 not available\n",
       "warng _ManageAtomicData: data for C6 not available\n",
       "warng _ManageAtomicData: data for C6 not available\n",
+      "warng _ManageAtomicData: data for C6 not available\n",
+      "warng _ManageAtomicData: data for C7 not available\n",
       "warng _ManageAtomicData: data for C7 not available\n",
       "warng _ManageAtomicData: data for C7 not available\n",
       "warng _ManageAtomicData: atom data not available for N5\n",
       "warng _ManageAtomicData: coll data not available for N5\n",
       "warng _ManageAtomicData: data for N6 not available\n",
       "warng _ManageAtomicData: data for N6 not available\n",
+      "warng _ManageAtomicData: data for N6 not available\n",
+      "warng _ManageAtomicData: data for N7 not available\n",
       "warng _ManageAtomicData: data for N7 not available\n",
       "warng _ManageAtomicData: data for N7 not available\n",
       "warng _ManageAtomicData: atom data not available for O6\n",
       "warng _ManageAtomicData: coll data not available for O6\n",
+      "warng _ManageAtomicData: data for O7 not available\n",
       "warng _ManageAtomicData: data for O7 not available\n",
       "warng _ManageAtomicData: data for O7 not available\n"
      ]
@@ -955,26 +1029,33 @@
      "data": {
       "text/plain": [
        "{'C1': Atom C1 from c_i_atom_FFS85.dat and c_i_coll_JBK87-PA76.dat,\n",
+       " 'C1r': Atom C1 from c_i_rec_P91.func,\n",
        " 'C2': Atom C2 from c_ii_atom_GMZ98.dat and c_ii_coll_BP92.dat,\n",
+       " 'C2r': Atom C2 from c_ii_rec_P91.func,\n",
        " 'C3': Atom C3 from c_iii_atom_G83-NS78-WFD96.dat and c_iii_coll_Bal85.dat,\n",
+       " 'C3r': Atom C3 from c_iii_rec_P91.func,\n",
        " 'C4': Atom C4 from c_iv_atom_WFD96.dat and c_iv_coll_AK04.dat,\n",
-       " 'C5': Atom C5 from None and None,\n",
-       " 'C6': Atom C6 from None and None,\n",
-       " 'C7': Atom C7 from None and None,\n",
+       " 'C4r': Atom C4 from c_iv_rec_P91.func,\n",
        " 'N1': Atom N1 from n_i_atom_KS86-WFD96.dat and n_i_coll_PA76-DMR76.dat,\n",
-       " 'N2': Atom N2 from n_ii_atom_GMZ97-WFD96.dat and n_ii_coll_T11.dat,\n",
+       " 'N1r': Atom N1 from n_i_rec_P91.func,\n",
+       " 'N2': Atom N2 from n_ii_atom_FFT04.dat and n_ii_coll_T11.dat,\n",
+       " 'N2r': Atom N2 from n_ii_rec_P91.func,\n",
        " 'N3': Atom N3 from n_iii_atom_GMZ98.dat and n_iii_coll_BP92.dat,\n",
+       " 'N3r': Atom N3 from n_iii_rec_P91.func,\n",
        " 'N4': Atom N4 from n_iv_atom_WFD96.dat and n_iv_coll_RBHB94.dat,\n",
-       " 'N5': Atom N5 from None and None,\n",
-       " 'N6': Atom N6 from None and None,\n",
-       " 'N7': Atom N7 from None and None,\n",
+       " 'N4r': Atom N4 from n_iv_rec_P91.func,\n",
+       " 'N5r': Atom N5 from n_v_rec_P91.func,\n",
        " 'O1': Atom O1 from o_i_atom_WFD96.dat and o_i_coll_BK95.dat,\n",
-       " 'O2': Atom O2 from o_ii_atom_Z82-WFD96.dat and o_ii_coll_P06-T07.dat,\n",
-       " 'O3': Atom O3 from o_iii_atom_SZ00-WFD96.dat and o_iii_coll_SSB14.dat,\n",
+       " 'O1r': Atom O1 from o_i_rec_P91.func,\n",
+       " 'O2': Atom O2 from o_ii_atom_FFT04.dat and o_ii_coll_Kal09.dat,\n",
+       " 'O2r': Atom O2 from o_ii_rec_SSB17-B-opt.hdf5,\n",
+       " 'O3': Atom O3 from o_iii_atom_FFT04-SZ00.dat and o_iii_coll_SSB14.dat,\n",
+       " 'O3r': Atom O3 from o_iii_rec_P91.func,\n",
        " 'O4': Atom O4 from o_iv_atom_GMZ98.dat and o_iv_coll_BP92.dat,\n",
+       " 'O4r': Atom O4 from o_iv_rec_P91.func,\n",
        " 'O5': Atom O5 from o_v_atom_H80-NS79.dat and o_v_coll_BBDK85.dat,\n",
-       " 'O6': Atom O6 from None and None,\n",
-       " 'O7': Atom O7 from None and None}"
+       " 'O5r': Atom O5 from o_v_rec_P91.func,\n",
+       " 'O6r': Atom O6 from o_vi_rec_P91.func}"
       ]
      },
      "execution_count": 29,
@@ -990,11 +1071,19 @@
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "warng _ManageAtomicData: rec data not available for Ar3\n"
+     ]
+    }
+   ],
    "source": [
     "atoms = pn.getAtomDict(atom_list=['O2', 'O3', 'Ar3', 'N2'])"
    ]
@@ -1011,10 +1100,13 @@
     {
      "data": {
       "text/plain": [
-       "{'Ar3': Atom Ar3 from ar_iii_atom_M83-KS86.dat and ar_iii_coll_GMZ95.dat,\n",
-       " 'N2': Atom N2 from n_ii_atom_GMZ97-WFD96.dat and n_ii_coll_T11.dat,\n",
-       " 'O2': Atom O2 from o_ii_atom_Z82-WFD96.dat and o_ii_coll_P06-T07.dat,\n",
-       " 'O3': Atom O3 from o_iii_atom_SZ00-WFD96.dat and o_iii_coll_SSB14.dat}"
+       "{'Ar3': Atom Ar3 from ar_iii_atom_MB09.dat and ar_iii_coll_MB09.dat,\n",
+       " 'N2': Atom N2 from n_ii_atom_FFT04.dat and n_ii_coll_T11.dat,\n",
+       " 'N2r': Atom N2 from n_ii_rec_P91.func,\n",
+       " 'O2': Atom O2 from o_ii_atom_FFT04.dat and o_ii_coll_Kal09.dat,\n",
+       " 'O2r': Atom O2 from o_ii_rec_SSB17-B-opt.hdf5,\n",
+       " 'O3': Atom O3 from o_iii_atom_FFT04-SZ00.dat and o_iii_coll_SSB14.dat,\n",
+       " 'O3r': Atom O3 from o_iii_rec_P91.func}"
       ]
      },
      "execution_count": 31,
@@ -1048,7 +1140,7 @@
     {
      "data": {
       "text/plain": [
-       "Atom N2 from n_ii_atom_GMZ97-WFD96.dat and n_ii_coll_T11.dat"
+       "Atom N2 from n_ii_atom_FFT04.dat and n_ii_coll_T11.dat"
       ]
      },
      "execution_count": 32,
@@ -1072,7 +1164,7 @@
     {
      "data": {
       "text/plain": [
-       "array(5.948363882838976e-21)"
+       "array(5.9490128036162234e-21)"
       ]
      },
      "execution_count": 33,
@@ -1106,7 +1198,7 @@
     {
      "data": {
       "text/plain": [
-       "dict_keys(['O2', 'O3', 'Ar3', 'N2'])"
+       "['Ar3', 'O3r', 'O2r', 'N2r', 'N2', 'O3', 'O2']"
       ]
      },
      "execution_count": 34,
@@ -1179,21 +1271,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
