--- a/pyneb/docs/Notebooks/PyNeb_manual_2.ipynb
+++ b/pyneb/docs/Notebooks/PyNeb_manual_2.ipynb
@@ -790,54 +790,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "warng _ManageAtomicData: rec data not available for P2\n",
-      "warng _ManageAtomicData: rec data not available for Ba4\n",
-      "warng _ManageAtomicData: rec data not available for Ba2\n",
-      "warng _ManageAtomicData: rec data not available for S3\n",
-      "warng _ManageAtomicData: rec data not available for Rb6\n",
-      "warng _ManageAtomicData: rec data not available for Rb5\n",
-      "warng _ManageAtomicData: rec data not available for Rb4\n",
-      "warng _ManageAtomicData: rec data not available for Ni3\n",
-      "warng _ManageAtomicData: rec data not available for Ca5\n",
-      "warng _ManageAtomicData: rec data not available for S4\n",
-      "warng _ManageAtomicData: rec data not available for Se4\n",
-      "warng _ManageAtomicData: rec data not available for Ne6\n",
-      "warng _ManageAtomicData: rec data not available for Kr4\n",
-      "warng _ManageAtomicData: rec data not available for K5\n",
-      "warng _ManageAtomicData: rec data not available for K4\n",
+      "warng _ManageAtomicData: rec data not available for Al2\n",
       "warng _ManageAtomicData: rec data not available for Ar2\n",
       "warng _ManageAtomicData: rec data not available for Ar3\n",
       "warng _ManageAtomicData: rec data not available for Ar4\n",
       "warng _ManageAtomicData: rec data not available for Ar5\n",
-      "warng _ManageAtomicData: rec data not available for Ne5\n",
-      "warng _ManageAtomicData: rec data not available for Ne2\n",
-      "warng _ManageAtomicData: rec data not available for Br4\n",
-      "warng _ManageAtomicData: rec data not available for Kr5\n",
-      "warng _ManageAtomicData: rec data not available for Ne3\n",
-      "warng _ManageAtomicData: rec data not available for Xe4\n",
-      "warng _ManageAtomicData: rec data not available for Xe6\n",
-      "warng _ManageAtomicData: rec data not available for S2\n",
-      "warng _ManageAtomicData: rec data not available for Al2\n",
-      "warng _ManageAtomicData: rec data not available for Ne4\n",
-      "warng _ManageAtomicData: rec data not available for Si3\n",
-      "warng _ManageAtomicData: rec data not available for Si2\n",
-      "warng _ManageAtomicData: rec data not available for Xe3\n",
-      "warng _ManageAtomicData: rec data not available for Fe6\n",
-      "warng _ManageAtomicData: rec data not available for Fe7\n",
-      "warng _ManageAtomicData: rec data not available for Fe4\n",
-      "warng _ManageAtomicData: rec data not available for Fe5\n",
-      "warng _ManageAtomicData: rec data not available for Fe2\n",
-      "warng _ManageAtomicData: rec data not available for Fe3\n",
-      "warng _ManageAtomicData: rec data not available for Na4\n",
-      "warng _ManageAtomicData: rec data not available for Se3\n",
-      "warng _ManageAtomicData: rec data not available for Cl4\n",
+      "warng _ManageAtomicData: rec data not available for Ba2\n",
+      "warng _ManageAtomicData: rec data not available for Ba4\n",
+      "warng _ManageAtomicData: rec data not available for Ca5\n",
       "warng _ManageAtomicData: rec data not available for Cl2\n",
       "warng _ManageAtomicData: rec data not available for Cl3\n",
-      "warng _ManageAtomicData: rec data not available for Br3\n",
-      "warng _ManageAtomicData: rec data not available for Mg7\n",
+      "warng _ManageAtomicData: rec data not available for Cl4\n",
+      "warng _ManageAtomicData: rec data not available for Fe3\n",
+      "warng _ManageAtomicData: rec data not available for K4\n",
+      "warng _ManageAtomicData: rec data not available for K5\n",
       "warng _ManageAtomicData: rec data not available for Mg5\n",
+      "warng _ManageAtomicData: rec data not available for Mg7\n",
+      "warng _ManageAtomicData: rec data not available for Na4\n",
+      "warng _ManageAtomicData: rec data not available for Na6\n",
+      "warng _ManageAtomicData: rec data not available for Ne2\n",
+      "warng _ManageAtomicData: rec data not available for Ne3\n",
+      "warng _ManageAtomicData: rec data not available for Ne4\n",
+      "warng _ManageAtomicData: rec data not available for Ne5\n",
+      "warng _ManageAtomicData: rec data not available for Ne6\n",
+      "warng _ManageAtomicData: rec data not available for Ni3\n",
+      "warng _ManageAtomicData: rec data not available for S2\n",
+      "warng _ManageAtomicData: rec data not available for S3\n",
+      "warng _ManageAtomicData: rec data not available for S4\n",
+      "warng _ManageAtomicData: rec data not available for Si2\n",
+      "warng _ManageAtomicData: rec data not available for Si3\n",
+      "warng _ManageAtomicData: rec data not available for Xe3\n",
+      "warng _ManageAtomicData: rec data not available for Xe4\n",
+      "warng _ManageAtomicData: rec data not available for Xe6\n",
       "warng _ManageAtomicData: rec data not available for Kr3\n",
-      "warng _ManageAtomicData: rec data not available for Na6\n"
+      "warng _ManageAtomicData: rec data not available for Kr4\n",
+      "warng _ManageAtomicData: rec data not available for Kr5\n",
+      "warng _ManageAtomicData: rec data not available for Se3\n",
+      "warng _ManageAtomicData: rec data not available for Se4\n",
+      "warng _ManageAtomicData: rec data not available for Br3\n",
+      "warng _ManageAtomicData: rec data not available for Br4\n",
+      "warng _ManageAtomicData: rec data not available for Rb4\n",
+      "warng _ManageAtomicData: rec data not available for Rb5\n",
+      "warng _ManageAtomicData: rec data not available for Rb6\n",
+      "warng _ManageAtomicData: rec data not available for Fe4\n",
+      "warng _ManageAtomicData: rec data not available for Fe5\n",
+      "warng _ManageAtomicData: rec data not available for Fe6\n",
+      "warng _ManageAtomicData: rec data not available for Fe7\n",
+      "warng _ManageAtomicData: rec data not available for Fe2\n",
+      "warng _ManageAtomicData: rec data not available for P2\n"
      ]
     }
    ],
@@ -1198,7 +1198,7 @@
     {
      "data": {
       "text/plain": [
-       "['Ar3', 'O3r', 'O2r', 'N2r', 'N2', 'O3', 'O2']"
+       "dict_keys(['O2', 'O2r', 'O3', 'O3r', 'Ar3', 'N2', 'N2r'])"
       ]
      },
      "execution_count": 34,
@@ -1271,21 +1271,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
