adding simple example

--- a/docs/Notebooks/PyNeb_manual_7b.ipynb
+++ b/docs/Notebooks/PyNeb_manual_7b.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -13,8 +13,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To determine the ionic abundance, one can use the Atom object:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O++/O = 2.59e-04\n"
+     ]
+    }
+   ],
+   "source": [
+    "O3 = pn.Atom('O',3)\n",
+    "Opp_abund = O3.getIonAbundance(int_ratio=3239.4, tem=1.5e4, den=110., to_eval='L(5007)+L(4959)', Hbeta=100.0)\n",
+    "print('O++/O = {:5.2e}'.format(Opp_abund))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "One can also use the observations from the Observation object:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -28,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -71,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -83,7 +116,6 @@
       "warng _ManageAtomicData: rec data not available for Ar3\n",
       "warng _ManageAtomicData: atom data not available for H1\n",
       "warng _ManageAtomicData: coll data not available for H1\n",
-      "warng _ManageAtomicData: rec data not available for Ne2\n",
       "warng _ManageAtomicData: rec data not available for Ne3\n",
       "warng _ManageAtomicData: rec data not available for S2\n",
       "warng _ManageAtomicData: rec data not available for S3\n",
@@ -135,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -165,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -216,5 +248,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 2
 }
